fix spacing name expert about screen

--- a/css/layouts/_pages.scss
+++ b/css/layouts/_pages.scss
@@ -469,6 +469,7 @@
                             left: 50% !important;
                             h1 {
                                 font-size: 1.9rem !important;
+                                
                             }
                             span {
                                 font-size: 1.3rem !important;
@@ -521,6 +522,7 @@
                             left: 50% !important;
                             h1 {
                                 font-size: 2rem !important;
+                                line-height: 100%;
                             }
                             span {
                                 font-size: 1.3rem;
